[package]
name = "vrf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sha2 = { version = "0.9.8" }
curve25519-dalek = { version = "3.2.0", features = ["serde"] }
serde = { version = "1.0.130", default-features = false }
serde_bytes = { version = "0.11.5" }

[dev-dependencies]
hex-literal = "0.3.3"
assert_matches = "1.5.0"