[package]
name = "vrf"
version = "0.1.0"
edition = "2021"
resolver = "2"
publish = false

[dependencies]
sha2 = { version = "0.10.8" }
# TODO: Remove legacy compatibility
curve25519-dalek = { version = "4.1.3", features = [
    "serde",
    "legacy_compatibility",
] }
ed25519-dalek = { version = "2.1.1" }
serde = { version = "1.0.210", default-features = false }
serde_bytes = { version = "0.11.15" }

[dev-dependencies]
hex-literal = "0.4.1"
assert_matches = "1.5.0"
