[package]
name = "vrf"
version = "0.1.0"
edition = "2021"
resolver = "2"
publish = false

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "serde",
    "digest",
] }
sha2 = { version = "0.10.8" }
# TODO: Remove legacy compatibility
ed25519-dalek = { version = "2.1.1", default-features = false }
# TODO: Get rid of this dependency altogether
serde = { version = "1.0.210", default-features = false }
serde_bytes = { version = "0.11.15" }
zeroize = { version = "1.8.1", features = ["derive"], default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
assert_matches = "1.5.0"
